src/objects/sparepartdetail__c.object
<CustomObject>
    <fields>
        <fullName>Chinesename__c</fullName>
        <formula>productname__r.Cname__c</formula>
        <label>备件中文名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Englishname__c</fullName>
        <formula>partnum__r.ProductNumber__r.Ename__c</formula>
        <label>英文名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>productname__r.Field1__c* number__c</formula>
        <label>总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>出库备件库</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北京备件库</fullName>
                </value>
                <value>
                    <fullName>广州备件库</fullName>
                </value>
                <value>
                    <fullName>上海备件库</fullName>
                </value>
                <value>
                    <fullName>香港备件库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KCBH__c</fullName>
        <label>#库存编号</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dprice__c</fullName>
        <label>单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fahuoriqi__c</fullName>
        <label>发货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fankuriqi__c</fullName>
        <label>返库日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partnum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartNo.</label>
        <referenceTo>stock__c</referenceTo>
        <relationshipLabel>备件明细</relationshipLabel>
        <relationshipName>xLb4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>productname__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品名称</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>备件明细</relationshipLabel>
        <relationshipName>GzFB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>serialnumber__c</fullName>
        <label>序列号</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>serialnumber_back__c</fullName>
        <label>返库序列号</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sparepart__c</fullName>
        <label>备件申请名称</label>
        <referenceTo>sparepart__c</referenceTo>
        <relationshipLabel>备件明细</relationshipLabel>
        <relationshipName>K9cG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>当前发货状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未发货</fullName>
                    <default>true</default>
                    <label>未发货</label>
                </value>
                <value>
                    <fullName>已发货</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>totleprice_del__c</fullName>
        <formula>dprice__c * number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>备件明细</label>
    <listViews>
        <fullName>All</fullName>
        <columns>partnum__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>sparepart__c</columns>
        <columns>Englishname__c</columns>
        <columns>Chinesename__c</columns>
        <columns>state__c</columns>
        <columns>number__c</columns>
        <columns>serialnumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>备件明细</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>